--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,10 @@
 /bazel-out
 
 # dependencies
-/node_modules
+/recon-client/node_modules/
+/api-gateway/node_modules/
+/user-service/node_modules/
+/game-service/node_modules/
 
 # profiling files
 chrome-profiler-events*.json
