--- a/game-service/.env
+++ b/game-service/.env
@@ -1,3 +1,3 @@
 DB_CONNECTION=mongodb+srv://r3c0n_Admin:k9UffpioKi1DFV7P@cluster0.9gz5z.mongodb.net/angulardb?retryWrites=true&w=majority
 HOST=localhost
-PORT=2468
+GAME_PORT=2468
