--- a/recon-client/package.json
+++ b/recon-client/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~11.1.2",
     "@angular/router": "~11.1.2",
     "bootstrap": "^4.6.0",
+    "jose": "^3.11.1",
     "jquery": "^3.6.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
