--- a/api-gateway/package.json
+++ b/api-gateway/package.json
@@ -10,6 +10,7 @@
   "author": "Ecorp Group, Capstone Project Spring 2021",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
     "dotenv": "^8.2.0",
