--- a/api-gateway/.env
+++ b/api-gateway/.env
@@ -1,4 +1,4 @@
-DB_CONNECTION=mongodb+srv://r3c0n_Admin:k9UffpioKi1DFV7P@cluster0.9gz5z.mongodb.net/angulardb?retryWrites=true&w=majority
+DB_CONNECTION=mongodb+srv://UserLoggedIn:ThisWillB3ThePassw0rd@cluster0.9gz5z.mongodb.net/angulardb?retryWrites=true&w=majority
 HOST=localhost
 API_PORT=4000
 JWTSECRETKEY = "secret"
